<resources>
    <string name="app_name">RanNote</string>
    <string name="btn_next">Next</string>
    <string name="name_questions">How do we call you?</string>
    <string name="hi">Hi!</string>
    <string name="et_name_empty">Please fill your username first and click save</string>
    <string name="btn_save">Save</string>
    <string name="note">Note</string>
    <string name="finance">Finance</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="feature">Feature</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="open_source_license">Open Source License</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="to_do">To-do</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtitle_hi_user">Write down your note here</string>
    <string name="hint_search">Search note…</string>
    <string name="dummy_desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in </string>
    <string name="title_add_dialog">Choose your action</string>
    <string name="title_dialog">Choose your action</string>
    <string name="add_note">Add Note</string>
    <string name="add_to_do">Add To-do</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="empty_message">Title or Description is Empty</string>
    <string name="subtitle_hi_user_todo">Let\'s be Productive!</string>
    <string name="label_create_new_task">Create New Task</string>
    <string name="hint_task_name">Task Name</string>
    <string name="hint_task_description">Task Description</string>
    <string name="label_remind_me">Remind Me</string>
    <string name="label_priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="label_category">Category</string>
    <string name="work">Work</string>
    <string name="family">Family</string>
    <string name="school">School</string>
    <string name="create_task">Create Task</string>
</resources>