<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_note"
            android:title="@string/note" />

        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_wallet"
            android:title="@string/finance" />
    </group>

    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:title="@string/setting">
            <menu>
                <item
                    android:id="@+id/item_language"
                    android:icon="@drawable/ic_language"
                    android:title="@string/language" />
                <item
                    android:id="@+id/item_theme"
                    android:icon="@drawable/ic_theme"
                    android:title="@string/theme" />
                <item
                    android:id="@+id/item_notification"
                    android:icon="@drawable/ic_notifications"
                    android:title="@string/notification"
                    app:actionLayout="@layout/container_notif_switch" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group_about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:title="@string/about">
            <menu>
                <item
                    android:id="@+id/item_open_source_license"
                    android:icon="@drawable/ic_open_source"
                    android:title="@string/open_source_license" />
            </menu>
        </item>
    </group>

</menu>