<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/noteFragment"
            android:icon="@drawable/ic_note"
            android:title="@string/note" />

        <item
            android:id="@+id/financeActivity"
            android:icon="@drawable/ic_wallet"
            android:title="@string/finance" />
    </group>

    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_open_source"
            android:title="@string/open_source_license" />
    </group>

</menu>