<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.App.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_note"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:srcCompat="@drawable/ic_note"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_add_note"
        style="@style/TextAppearanceRegular.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_note"
        app:layout_constraintBottom_toBottomOf="@id/img_note"
        app:layout_constraintStart_toEndOf="@id/img_note"
        app:layout_constraintTop_toTopOf="@id/img_note" />

    <ImageView
        android:id="@+id/img_todo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_note"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_to_do"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_add_todo"
        style="@style/TextAppearanceRegular.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_to_do"
        app:layout_constraintBottom_toBottomOf="@id/img_todo"
        app:layout_constraintStart_toEndOf="@id/img_todo"
        app:layout_constraintTop_toTopOf="@id/img_todo" />


</androidx.constraintlayout.widget.ConstraintLayout>